# claudecitizen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agents/: AGENTS.md
.cursor/rules/: agent-conventions.mdc  editor-first-migration.mdc  prefab-editor.mdc  ship-flight.mdc  terrain-cache.mdc
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  quality.yml
backend/: .env.example  Dockerfile
backend/crates/protocol/: Cargo.toml  build.rs
backend/crates/protocol/src/: lib.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: admin.rs  auth.rs  cell.rs  config.rs  error.rs  game.rs  health.rs  http.rs  mail.rs  main.rs  state.rs  world_transport.rs
backend/crates/sim-core/: Cargo.toml
backend/crates/sim-core/src/: authority.rs  lib.rs
backend/migrations/: 0001_multiplayer_presence.sql  0004_hangar_building.sql  0007_player_character_appearance.sql  0009_player_loadout.sql  0010_demo_backpack.sql  0011_authoritative_cells.sql  0012_player_survival_vitals.sql  0013_player_survival_vitals_retry.sql  0014_wearable_equipment.sql  0015_consumable_restore.sql  0016_weapon_combat_ammo.sql  0017_weapon_combat_seed.sql
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.example.yaml  migration-job.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  secret.example.yaml  service-account.yaml  service.yaml
desktop/: before-build.cjs  main.mjs  package.json  preload.cjs
docs/: README.md  docusaurus.config.ts  netlify.toml  package.json  sidebars.ts
docs/docs/: assets.md  editor.md  intro.md  play.md  quick-start.md  roadmap.md
editor-desktop/: README.md  before-build.cjs  main.mjs  package.json  preload.cjs  project_hub.mjs  repository.mjs
editor/assets/: README.md
prds/scene-first-editor/: CHECKLIST.md  PRD.md  README.md
prds/surface-spawn-catalog/: CHECKLIST.md  PRD.md  README.md
prds/system-map/: CHECKLIST.md  PRD.md  README.md
prds/weapon-combat/: CHECKLIST.md  PRD.md  README.md
proto/: world.proto
scripts/: bake_blackmarket_textures.py  bake_demo_station_textures.py  bake_ship_textures.py  bake_spawn_tiles.ts  biome_map.ts  biome_stats.ts  build_wasm.mjs  check_page.mjs  count_tiles.ts  dev-server.ts  find_plains_spawn.ts  height_stats.ts  inspect_glb.mjs  measure_desync.ts  spike-demo.ts  validate_terrain_system.ts  validate_tiles.ts
server/: .env.example  package.json  prisma.config.ts  tsconfig.build.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.module.ts  main.ts
src/: app.ts  build_mode.ts  vite-env.d.ts
src/app/: admin_screen.ts  bootstrap.ts  character_creation_screen.css  character_creation_screen.ts  game_loop.ts  game_settings.ts  loading_screen.ts  play_session.ts  play_session_bootstrap.ts  play_session_build.ts  play_session_dom.ts  play_session_overlays.ts  play_session_world.ts  player_controls.ts  player_vitals_session.ts  scene_launch.ts  ship_play_session.ts  sidekick_creator_ui.css  sidekick_creator_ui.ts  sidekick_preview_session.ts  title_screen.ts
src/audio/: footsteps.ts  sfx.ts  sound_scene.ts
src/cache/: cache_keys.ts  spawn_pack.ts  terrain_tile_cache.ts  tile_cache_store.ts
src/editor/: api.ts  audio_preview.ts  commands.ts  component_actions.ts  document.ts  dom.ts  editor_session.ts  glb_binding.ts  model_thumbnail_cache.ts  panel_resize.ts  serialize.ts  session_helpers.ts  styles.ts
src/flight/: camera_zoom.ts  control_mix.ts  flight_aim.ts  flight_body.ts  flight_config.ts  flight_modes.ts  input_settings.ts  nav_route.ts  player_controls.ts  quantum_travel.ts  ship_instance.ts  ship_world.ts
src/game/: create_game_loop.ts  loop_context.ts  loop_context_options.ts  types.ts
src/math/: quat.ts  (+1 more)
test/: sidekick_creator.test.ts
(+614 files in other folders)
