[workspace]
members = [
  "backend/crates/protocol",
  "backend/crates/server",
  "backend/crates/sim-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.9", features = ["http2", "json", "macros"] }
base64 = "0.22.1"
bcrypt = "0.17.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
hex = "0.4.3"
jsonwebtoken = { version = "9.3.1", default-features = false }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
prost = "0.14.4"
prost-build = "0.14.4"
protoc-bin-vendored = "3.2.0"
rand = "0.9.2"
rapier3d = { version = "0.34.0", features = ["enhanced-determinism", "serde-serialize"] }
redis = { version = "1.4.0", features = ["aio", "connection-manager", "tokio-comp", "streams"] }
reqwest = { version = "0.13.2", default-features = false, features = ["form", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["catch-panic", "compression-gzip", "cors", "limit", "request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = "2.5.8"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
wtransport = "0.7.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
