[package]
name = "cc-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
bytes.workspace = true
prost.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true

