[package]
name = "cc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "cc-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bcrypt.workspace = true
bytes.workspace = true
cc-protocol = { path = "../protocol" }
cc-sim-core = { path = "../sim-core", features = ["native"] }
chrono.workspace = true
cookie.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
lettre.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
prost.workspace = true
rand.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
wtransport.workspace = true
